prevent the bus from polling in JAX-RS archetype

--- a/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
@@ -2,11 +2,10 @@
 <head>
     <title>Errai Application</title>
     <link rel="stylesheet" type="text/css" href="App.css">
-    <script type="text/javascript" language="javascript" src="App/App.nocache.js"></script>
+    <script type="text/javascript">
+          erraiBusRemoteCommunicationEnabled = false;
+    </script>
 </head>
 <body>
-
-<div id="rootPanel"></div>
-
-</body>
+    <script type="text/javascript" language="javascript" src="App/App.nocache.js"></script>
 </html>
