removed jboss6 profile, minimized gwt-maven config, fixed DOCTYPE warning, added MANIFEST.MF for jboss7 profile

--- a/cdi-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
+++ b/cdi-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
@@ -1,11 +1,12 @@
 #set( $symbol_pound = '#' )
 #set( $symbol_dollar = '$' )
 #set( $symbol_escape = '\' )
+<!DOCTYPE html>
 <html>
 <head>
     <title>Errai Application</title>
     <link rel="stylesheet" type="text/css" href="App.css">    
-    <script type="text/javascript" language="javascript" src="app/app.nocache.js"></script>    
+    <script type="text/javascript" src="app/app.nocache.js"></script>    
 </head>
 <body>
 
