ERRAI-308 : fix http://jboss.org/jbossas link

--- a/kitchensink-quickstart/src/main/resources/archetype-resources/src/main/webapp/KitchenSink.html
+++ b/kitchensink-quickstart/src/main/resources/archetype-resources/src/main/webapp/KitchenSink.html
@@ -24,7 +24,7 @@
 					<li><a
 						href="https://docs.jboss.org/author/display/AS7/Getting+Started+Developing+Applications+Guide">JBoss
 							AS 7 Getting Started Developing Applications Guide</a></li>
-					<li><a href="jboss.org/jbossas">JBoss AS 7 project site</a></li>
+					<li><a href="http://jboss.org/jbossas">JBoss AS 7 project site</a></li>
 				</ul>
 				<p>Learn about the Java EE 6 platform and the component model it
 					provides.</p>
