turning off remote comm. in jax-rs archetype again

--- a/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
+++ b/jaxrs-quickstart/src/main/resources/archetype-resources/src/main/webapp/App.html
@@ -3,6 +3,9 @@
 <head>
     <title>Errai Application</title>
     <link rel="stylesheet" type="text/css" href="App.css">
+    <script type="text/javascript">
+        erraiBusRemoteCommunicationEnabled = false;
+    </script>
 </head>
 <body>
     <script type="text/javascript" language="javascript" src="App/App.nocache.js"></script>
